--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Jibran Porfolio",
-  "name": "Full Stack Developer",
+  "name": "MERN Stack Developer",
   "icons": [
     {
       "src": "favicon.ico",
