--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.57",
     "react-pdf": "^5.7.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.2.2",
